Fix spacing of playlist items with long names.

--- a/mftb5/static/less/playlist.less
+++ b/mftb5/static/less/playlist.less
@@ -22,7 +22,7 @@ body.audio #playlist {
     left: 100%;
 
     li {
-      max-width: 15em;
+      max-width: 18em;
       display: inline-block;
       overflow: hidden;
       position: relative;
@@ -78,10 +78,9 @@ body.audio #playlist {
       }
 
       p {
-        margin-right: 40px;
+        margin-right: 30px;
         white-space: nowrap;
         overflow: hidden;
-        width: 100%;
 
         &:not(.animating) {
           text-overflow: ellipsis;
